syntax = "proto3";
package pactum;


import "github.com/gogo/protobuf/gogoproto/gogo.proto";

message HandshakeResponse {
    string key  = 1;
}